<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" 
        android:layout_margin="5dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn1" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn2" />
     <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn3" />
     <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn4" />
     <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn5" />
     
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp" />

   <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:text="@string/btn6"
        android:visibility="gone"/>

     <TextView 
         android:id="@+id/info_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
</LinearLayout>
